# testguide_report-generator

./: .dockerignore  .gitignore  LICENSE  README.md  REUSE.toml  conftest.py  default.pylintrc  example_TestSuite.py  pyproject.toml
.github/: labels.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: 1-feature-request.yml  2-bug-report.yml  config.yml
.github/automation_scripts/: scripts.py
.github/workflows/: auto-merge-actions-updates.yml  close-fork-prs.yml  dependency-check.yml  lint.yml  md-link-checker.yml  release-drafter.yml  release.yml  reuse.yml  sync-labels.yml  test.yml  update-gh-pages.yml
.reuse/: dep5
LICENSES/: MIT.txt
config/license/: allowlist.json  check_dependencies.py
docs/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  testguide_report_generator.html  testguide_report_generator.model.html  testguide_report_generator.util.html
docs/.doctrees/: environment.pickle  index.doctree  modules.doctree  testguide_report_generator.doctree  testguide_report_generator.model.doctree  testguide_report_generator.util.doctree
docs/_sources/: index.rst.txt  modules.rst.txt  testguide_report_generator.model.rst.txt  testguide_report_generator.rst.txt  testguide_report_generator.util.rst.txt
docs/source/: conf.py  index.rst
testguide_report_generator/: ReportGenerator.py  __init__.py
testguide_report_generator/model/: TestCase.py  TestCaseFolder.py  TestSuite.py  __init__.py
testguide_report_generator/schema/: schema.json
testguide_report_generator/util/: File.py  Json2AtxRepr.py  JsonValidator.py  ValidityChecks.py
tests/: __init__.py  test_ReportGenerator.py
tests/e2e/: Dockerfile  Jenkinsfile  e2e_testsuite.py  test_e2e.py
tests/model/: __init__.py  test_TestCase.py  test_TestCaseFolder.py  test_TestSuite.py
tests/resources/: invalid.json  testcase.json  testsuite.json  valid.json
tests/util/: __init__.py  test_File.py  test_JsonValidator.py  test_ValidityChecks.py
