# Copyright (c) 2022-2024 tracetronic GmbH
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "testguide_report-generator"
version = "1.2-beta"
description = "This generator acts as a helper to create a test.guide compatible test report."
authors = [ "tracetronic GmbH",]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
jsonschema = "==4.16.0"

[tool.poetry.group.workflow.dependencies]
toml = "^0.10.2"
requests = "^2.30.0"

[tool.poetry.group.dev.dependencies]
pytest = "==7.2.0"
pytest-cov = "==4.0.0"
pylint = "==3.1.0"
cyclonedx-bom = "==3.8.0"
jsonschema = "==4.16.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^5.3.0"
python_docs_theme = "^2022.1"
